# DeepResearch-HF

./: .gitignore  DeepResearcAgent.md  README.md  app.py  pyproject.toml  requirements.txt  smol_agent_intro.ipynb
scripts/: mdconvert.py  text_web_browser.py
