[project]
name = "open-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.37.1",
    "beautifulsoup4>=4.12.3",
    "datasets>=2.21.0",
    "google-search-results>=2.4.2",
    "huggingface-hub>=0.23.4",
    "mammoth>=1.8.0",
    "markdownify>=0.13.1",
    "numexpr>=2.10.1",
    "numpy>=2.1.2",
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathvalidate>=3.2.1",
    "pillow>=11.0.0",
    "puremagic>=1.28",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
    "serpapi>=0.1.5",
    "tqdm>=4.66.4",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "transformers>=4.46.0",
    "youtube-transcript-api>=0.6.2",
    "chess>=1.11.1",
    "sympy>=1.13.1",
    "pubchempy>=1.0.4",
    "bio>=1.7.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "xlrd>=2.0.1",
    "speechrecognition>=3.14.1",
    "litellm>=1.60.2",
    "smolagents",
    "gradio>=5.15.0",
    "pdfminer-six>=20240706",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
smolagents = { git = "https://github.com/huggingface/smolagents.git", rev = "main" }
